UI for home configuration addition, changes in backend
