# SwiftSurfingServer/SwiftSurfingServer/Sources/App/Models/HomeConfiguration.swift
@@ -18,23 +18,32 @@ final class HomeConfiguration: Model, Content {
     @Parent(key: "couchId")
     var couch: Couch
     
+    @Field(key: "name")
+    var name: String
+    
     @Enum(key: "configType")
     var type: ConfigurationType
+    
+    @Field(key: "itemNames")
+    var itemNames: [String]
     
     @Enum(key: "state")
     var state: State
     
     init() {}
     
-    init(id: UUID? = nil, couchId: Couch.IDValue, type: ConfigurationType, state: State) {
+    init(id: UUID? = nil, couchId: Couch.IDValue, name: String, type: ConfigurationType, itemNames: [String] = [], state: State) {
         self.id = id
         self.$couch.id = couchId
+        self.name = name
         self.type = type
+        self.itemNames = itemNames
+        
         self.state = state
     }
 }
 
-enum ConfigurationType: String, Codable {
+enum ConfigurationType: String, Codable, CaseIterable {
     case heating = "heating"
     case cooling = "cooling"
     case weatherWatcher = "weatherWatcher"
